---------------------------------------------------------------------------
Version 3.12.0 (rgerhards), 2008-02-??
- bugfix: debug.html was missing from release tarball - thanks to Michael
  Biebl for bringing this to my attention
- some internal cleanup on the stringbuf object calling interface
---------------------------------------------------------------------------
Version 3.11.3 (rgerhards), 2008-02-18
- fixed a bug in imklog which lead to duplicate message content in
  kernel logs
- added support for better plugin handling in libdbi (we contributed
  a patch to do that, we just now need to wait for the next libdbi
  version)
- bugfix: fixed abort when invalid template was provided to an action
  bug http://bugzilla.adiscon.com/show_bug.cgi?id=4
- re-instantiated SIGUSR1 function; added SIGUSR2 to generate debug
  status output
- added some documentation on runtime-debug settings
- slightly improved man pages for novice users
---------------------------------------------------------------------------
Version 3.11.2 (rgerhards), 2008-02-15
- added the capability to monitor text files and process their content
  as syslog messages (including forwarding)
- added support for libdbi, a database abstraction layer. rsyslog now
  also supports the following databases via dbi drivers:
  * Firebird/Interbase
  * FreeTDS (access to MS SQL Server and Sybase)
  * SQLite/SQLite3
  * Ingres (experimental)
  * mSQL (experimental)
  * Oracle (experimental)
  Additional drivers may be provided by the libdbi-drivers project, which
  can be used by rsyslog as soon as they become available.
- removed some left-over unnecessary dbgprintf's (cluttered screen,
  cosmetic)
- doc bugfix: html documentation for omsnmp was missing
---------------------------------------------------------------------------
Version 3.11.1 (rgerhards), 2008-02-12
- SNMP trap sender added thanks to Andre Lorbach (omsnmp)
- added input-plugin interface specification in form of a (copy) template