@@ -3,6 +3,7 @@ Version 3.12.0 (rgerhards), 2008-02-??
 - bugfix: debug.html was missing from release tarball - thanks to Michael
   Biebl for bringing this to my attention
 - some internal cleanup on the stringbuf object calling interface
+- general code cleanup and further modularization
 ---------------------------------------------------------------------------
 Version 3.11.3 (rgerhards), 2008-02-18
 - fixed a bug in imklog which lead to duplicate message content in
